--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Saved articles</a></li>
-                <li><a href="#">New articles</a></li>
+                
             </ul>
         </div>
     </nav>
@@ -36,9 +36,14 @@
                     <p>El norte - news</p>
                     <p><a class="btn btn-primary btn-lg" href="#" role="button">Scrape new articles</a></p>
                 </div>
+
+                <div id="results"></div>
+
             </div>
         </div>
     </div>
+
+
 </body>
 
 
