--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,15 @@
                     <p><a class="btn btn-primary btn-lg" href="#" role="button">Scrape new articles</a></p>
                 </div>
 
-                <div id="results"></div>
+<form>
+    <fieldset>
+        <legend> Today's Articles</legend>
+        <div id="results"></div>
+    </fieldset>
+</form>
+
+
+
 
             </div>
         </div>
