--- a/public/saved.html
+++ b/public/saved.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Mongo-Scrape News</title>
-
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-     <!-- Bootstrap Core CSS -->
+    <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Theme CSS -->
-    <link href="/public/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link href='//fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
-    <link href='//fonts.googleapis.com/css?family=Moul' rel='stylesheet'>
-    </head>
-
+    <link href='http://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet' type='text'>
+    <link href='http://fonts.googleapis.com/css?family=Moul' rel='stylesheet' type='text'>
+</head>
 <body>
     <!-- Basic Bootstrap Navigation Bar -->
     <nav class="navbar navbar-default">
@@ -42,15 +40,10 @@
                 <button id="clearall">Delete All Notes</button>
             </div>
         </div>
-        <div id="results"></div>
-        <script src="app.js"></script>
     </div>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="app.js"></script>
 </body>
-
-
-<!-- jQuery -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<!-- Bootstrap Core JavaScript -->
-<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
 </html>
